--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 # wir nehmen im utils/connectDB.js den CONNECTION_STRING für MongoDB
 
-CONNECTION_STRING=mongodb+srv://username:password@cluster.mongodb.net/bewerbungen?retryWrites=true&w=majority
+# Beispielhafte MongoDB-Verbindung (bitte mit deinen echten Daten ersetzen)
+CONNECTION_STRING=mongodb+srv://<username>:<password>@<cluster>.mongodb.net/<database>?retryWrites=true&w=majority
+
 
 # falls du einen anderen Name für deine Datenbank haben willst, dann in "/bewerbungen?" anpassen
 
